--- a/magazine/templates/blog_header.html
+++ b/magazine/templates/blog_header.html
@@ -119,7 +119,14 @@
           <!--   <li > <div class="foo"> </div><li> -->
             <li ><a href="">OUR WEBSITE</a></li>
             <li ><a href="/blog/archives">ARCHIVES</a></li>
-            <li ><a href="/blog/writing">WRITING</a></li>
+            <!-- look into hovering dropdowns https://cameronspear.com/demos/bootstrap-hover-dropdown/-->
+            <li class="dropdown"><a href="/blog/writing" class="dropdown-toggle" data-toggle="dropdown" >WRITING</a>
+              <ul class ="dropdown-menu">
+                <li><a href="#">Sub Menu 1</a></li>
+                <li><a href="#">Sub Menu 2</a></li>
+                <li><a href="#">Sub Menu 3</a></li>
+              </ul>
+            </li>
             <li ><a href="/blog/art">ART</a></li>
             <li ><a href="/blog/multimedia">MULTIMEDIA</a></li>
             <li ><a href="/blog/events">EVENTS</a></li>
